--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,4 @@
 {
-  "snippets.ultisnips.pythonPrompt": false
+  "snippets.ultisnips.pythonPrompt": false,
+  "clangd.path": "/usr/bin/clangd-15"
 }
